reduce logs and inprove HTML

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <h1>It's alive!</h1>
   <p>Congratulations, you successfully deployed a container image to Cloud Run.</p>
-  <p>This created the revision {{.Revision}} in the Cloud Run service {{.Service}}.</p>
+  <p>This created the revision "{{.Revision}}" in the Cloud Run service "{{.Service}}".</p>
 </div>
 
 <div class="details">
