--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <h1>It's alive!</h1>
   <p>Congratulations, you successfully deployed a container image to Cloud Run.</p>
-  <p>This created the revision "{{.Revision}}" in the Cloud Run service "{{.Service}}".</p>
+  <p>This created the revision "{{.Revision}}" of the Cloud Run service "{{.Service}}" in the GCP project "{{.Project}}".</p>
 </div>
 
 <div class="details">
