--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
  .code {
 	font-family: 'Roboto Mono', Courier, monospace;
-	color: #F90056;
+	color: #A30038;
 	background-color: #F8F8F8;
 	border: 1px solid #DDD;
 	border-radius: 2px;
@@ -121,7 +121,7 @@
  .cta a {
 	color: white;
 	text-decoration: none;
-	background-color: rgb(66, 133, 244);
+	background-color: rgb(14, 101, 241);
 	padding: 8px 12px;
 	margin-top: 8px;
 	min-height: 36px;
@@ -170,9 +170,9 @@
 		<div class="hero">
 			<div style="text-align:center;">
 				<picture>
-                    <source srcset="/assets/celebration-dark.svg" alt="celebration" media="(prefers-color-scheme: dark)">
-                    <img src="/assets/celebration.svg" alt="celebration" width="427" height="231">
-                </picture>
+					<source srcset="/assets/celebration-dark.svg" alt="A group celebrating" media="(prefers-color-scheme: dark)">
+					<img src="/assets/celebration.svg" alt="A group celebrating" width="427" height="231">
+				</picture>
 			</div>
 
 			<div class="message">
@@ -187,11 +187,13 @@
 					class="code">{{.Project}}</span>{{end}}.</p>
 
 			<p class="callout">
-				<label><img src="/assets/lightbulb_icon.svg" style="margin:0px 8px 0px 0px; vertical-align:text-top;">
+				<label>
+					<img src="/assets/lightbulb_icon.svg" alt="A lightbulb" style="margin:0px 8px 0px 0px; vertical-align:text-top;">
 					You can deploy any container to Cloud Run that listens for HTTP requests on the port defined by the
 					<code>PORT</code> environment variable.
 					Cloud Run will scale automatically based on requests and you never have to worry about
-					infrastructure.</label>
+					infrastructure.
+				</label>
 			</p>
 
 			<h3>What's next?</h3>
