--- a/index.html
+++ b/index.html
@@ -20,58 +20,58 @@
 	line-height: 1.6;
  }
 
- h1 {
+h1 {
 	font-size: 24px;
 	font-weight: bold;
 	margin-bottom: 0px;
- }
+}
 
- h2 {
+h2 {
 	font-size: 18px;
 	font-weight: normal;
 	margin-top: 4px;
- }
+}
 
- h3 {
+h3 {
 	font-size: 20px;
 	margin-bottom: 0px;
- }
+}
 
- .next {
-	font-size: 15px;
+.next {
+    font-size: 15px;
 	margin-top: 8px;
 	margin-bottom: 8px;
- }
+}
 
- .container {
+.container {
 	max-width: 700px;
 	margin-left: auto;
 	margin-right: auto;
 } 
 
- .hero {
+.hero {
 	margin-top: 172px;
- }
+}
 
- .hero .logo {
+.hero .logo {
 	width: 140px;
 	float: left;
 	margin-right: 32px;
- }
+}
 
- .hero .message {
+.hero .message {
 	font-size: 15px;
 	text-align: center;
 	margin-bottom: 24px;
- }
+}
 
- .details {
+.details {
 	clear: both;
 	height: 400px;
 	line-height: 1.8;
- }
+}
 
- .callout {
+.callout {
 	font-size: 14px;
 	background-color: #E8F0FE;
 	width: 100%;
@@ -79,15 +79,15 @@
 	font-weight: 600;
 	padding: 16px 24px;
 	line-height: 1.6;
- }
+}
 
- .callout label {
+.callout label {
 	display: block;
 	padding-left: 2em;
 	text-indent: -2em;
- }
+}
 
- .code {
+code {
 	font-family: 'Roboto Mono', Courier, monospace;
 	color: #A30038;
 	background-color: #F8F8F8;
@@ -95,30 +95,9 @@
 	border-radius: 2px;
 	padding: 0 6px;
 	font-weight: 500;
- }
+}
 
- .warning {
-	color: rgb(213, 0, 0);
-	background: #fbe9e7;
-	margin-bottom: 1.0em;
-	padding: 1.0em;
- }
-
- .warning a:visited {
-	color: rgb(213, 0, 0);
- }
-
- .warning a:link {
-	color: rgb(213, 0, 0);
- }
-
- .cta {
-	color: #3367D6;
-	text-align: left;
-	position: absolute;
- }
-
- .cta a {
+.cta a {
 	color: white;
 	text-decoration: none;
 	background-color: rgb(14, 101, 241);
@@ -127,37 +106,32 @@
 	min-height: 36px;
 	border-radius: 2px;
 	font-weight: 600;
- }
+}
 
- .cta a:hover {
-	background-color: rgb(66, 133, 244, 0.9);
- }
+.cta a:hover {
+    background-color: rgb(66, 133, 244, 0.9);
+}
 
- @media (max-width: 600px) {
-  .hero .logo {
-	  float: initial;
-	  display: block;
-	  margin-left: auto;
-	  margin-right: auto;
-	}
+@media (max-width: 600px) {
+    .hero .logo {
+        float: initial;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
 	.container {
-	  margin-top: 0;
+        margin-top: 0;
 	}
 
-	.hero {
-	  margin-top: 0;
-	  margin-bottom: 24px;
+    .hero {
+        margin-top: 0;
+        margin-bottom: 24px;
 	}
-  }
-  @media (prefers-color-scheme: dark) {
+}
+@media (prefers-color-scheme: dark) {
     body {
         background: black url('/assets/dark_bg.svg');
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
-        line-height: 1.6;
-        font-family: 'Roboto', sans-serif;
         color:white;
     }
 }
@@ -182,9 +156,10 @@
 		</div>
 
 		<div class="details">
-			<p>This created the revision <span class="code">{{.Revision}}</span> of the Cloud Run service <span
-					class="code">{{.Service}}</span>{{if .ProjectFound}} in the GCP project <span
-					class="code">{{.Project}}</span>{{end}}.</p>
+			<p>
+                This created the revision <code>{{.Revision}}</code> of the Cloud Run service <code>{{.Service}}</code>
+                {{if .ProjectFound}} in the GCP project <code>{{.Project}}</code>{{end}}.
+            </p>
 
 			<p class="callout">
 				<label>
@@ -201,7 +176,7 @@
 				language into
 				a container image, and then deploy it to Cloud Run.</p>
 			<p class="cta">
-				<a href="https://cloud.google.com/run/docs/quickstarts/build-and-deploy" target="_blank">
+				<a href="https://cloud.google.com/run/docs/quickstarts/build-and-deploy" target="_blank" rel="noopener">
 					BUILD AND DEPLOY QUICKSTART</a></p>
 		</div>
 	</div>
