--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ h1 {
 	margin-bottom: 0px;
 }
 
-h2 {
+.congrats {
 	font-size: 18px;
 	font-weight: normal;
 	margin-top: 4px;
@@ -146,7 +146,7 @@ code {
 
 			<div class="message">
 				<h1>It's running!</h1>
-				<h2>Congratulations, you successfully deployed a container image to Cloud Run</h2>
+				<div class="congrats">Congratulations, you successfully deployed a container image to Cloud Run</div>
 			</div>
 		</div>
 
