Print IAP authenticated user
We aren't parsing and validating x-goog-iap-jwt-assertion header since it
doesn't provide any utility here.

Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@ code {
 				{{ end }}
 			</p>
 
+			{{ with .AuthenticatedEmail }}
+				<p>
+					You are authenticated as
+					<code>{{.}}</code>.
+				</p>
+			{{ end }}
+
 			<p class="callout">
 				You can deploy any container to Cloud Run that listens for HTTP requests on the port defined by the
 				<code>PORT</code> environment variable.
